adding new test

--- a/Famoser.SyncApi.Webpage/.gitignore
+++ b/Famoser.SyncApi.Webpage/.gitignore
@@ -4,6 +4,7 @@ app/cache/*
 app/logs/*
 app/data.sqlite
 app/data_test.sqlite
+app/data_test*.sqlite
 node_modules
 bower_components
 src/public/assets/vendor/*
