--- a/Famoser.SyncApi.Webpage/composer.json
+++ b/Famoser.SyncApi.Webpage/composer.json
@@ -26,12 +26,14 @@
     "slim/twig-view": "^2.1",
     "famoser/jsonmapper": "*",
     "codeguy/upload": "*",
-    "phpunit/phpunit": "^5.6"
+    "phpunit/phpunit": "^5.6",
+    "phpmailer/phpmailer": "^5"
   },
   "require-dev": {
     "codeclimate/php-test-reporter": "dev-master",
     "squizlabs/php_codesniffer": "2.*",
-    "deployer/recipes": "^3.1"
+    "deployer/recipes": "^3.1",
+    "codacy/coverage": "dev-master"
   },
   "autoload": {
     "psr-4": {
