implementing proper error reporting

--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -68,17 +68,19 @@
     <Compile Include="Repositories\Base\PersistentRepository.cs" />
     <Compile Include="Repositories\ApiCollectionRepository.cs" />
     <Compile Include="Services\ApiConfigurationService.cs" />
+    <Compile Include="Services\ApiTraceService.cs" />
     <Compile Include="Services\Interfaces\Authentication\IApiDeviceAuthenticationService.cs" />
     <Compile Include="Services\Interfaces\Authentication\IApiUserAuthenticationRepository.cs" />
+    <Compile Include="Services\Interfaces\IApiTraceService.cs" />
     <Compile Include="Storage\Cache\CacheEntity.cs" />
     <Compile Include="Storage\Cache\CollectionCacheEntity.cs" />
     <Compile Include="Api\Communication\Entities\SyncEntity.cs" />
     <Compile Include="Api\Communication\Entities\UserEntity.cs" />
     <Compile Include="Models\Information\CacheInformations.cs" />
     <Compile Include="Storage\Roaming\ApiRoamingEntity.cs" />
-    <Compile Include="Enums\ApiError.cs" />
+    <Compile Include="Api\Enums\ApiError.cs" />
     <Compile Include="Enums\AuthenticationState.cs" />
-    <Compile Include="Enums\OnlineAction.cs" />
+    <Compile Include="Api\Enums\OnlineAction.cs" />
     <Compile Include="Enums\PendingAction.cs" />
     <Compile Include="Helpers\AuthorizationHelper.cs" />
     <Compile Include="Managers\Interfaces\IManager.cs" />
