--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ install:
 after_script:
   - ./vendor/bin/test-reporter
   - ./vendor/bin/codacycoverage clover
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover ./build/logs/clover.xml
+ 
