--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 
 after_script:
   - ./vendor/bin/test-reporter
-  - ./vendor/bin/codacycoverage clover
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover ./build/logs/clover.xml
+  - cd ..
+  - ./Famoser.SyncApi.Webpage/vendor/bin/codacycoverage clover ./Famoser.SyncApi.Webpage/build/logs/clover.xml
  
