--- a/Famoser.SyncApi.Webpage/composer.json
+++ b/Famoser.SyncApi.Webpage/composer.json
@@ -33,6 +33,7 @@
     "codeclimate/php-test-reporter": "dev-master",
     "squizlabs/php_codesniffer": "2.*",
     "deployer/recipes": "^3.1",
+    "deployer/deployer": "dev-master",
     "codacy/coverage": "dev-master"
   },
   "autoload": {
