--- a/Famoser.SyncApi.NUnitTests/packages.config
+++ b/Famoser.SyncApi.NUnitTests/packages.config
@@ -4,4 +4,5 @@
   <package id="Famoser.FrameworkEssentials" version="2.7.6" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net452" />
   <package id="NUnit" version="3.6.0" targetFramework="net452" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net462" />
 </packages>
