--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,2 +1,18 @@
+os: Visual Studio 2017
+init:
+- git config --global core.autocrlf true
+install:
+- set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 before_build:
   - nuget restore
+build:
+  project: Famoser.SyncApi.sln
+  verbosity: minimal
+test_script: 
+  - .\packages\OpenCover.4.6.519\OpenCover.Console.exe -register:user -target:"%xunit20%\xunit.console.x86.exe" -targetargs:".\Famoser.SyncApi.NUnitTests\bin\Debug\Famoser.SyncApi.NUnitTests.dll  -noshadow -appveyor" -filter:"+[SyncApi]*  -[SyncApi]SyncApi.Properties.*" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -output:.\SyncApi_coverage.xml -returntargetcode
+  - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
+  - pip install codecov
+  - codecov -f "SyncApi_coverage.xml"
+# preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
+cache:
+  - packages -> **\packages.config
