--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,8 @@ build:
   project: Famoser.SyncApi.sln
   verbosity: minimal
 test_script:
-  - tree \
-  - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:"/noresults /noisolation /testcontainer:"".\Famoser.SyncApi.UnitTests\bin\Debug\Famoser.SyncApi.UnitTests.dll" -filter:"+[SyncApi]*  -[SyncApi]SyncApi.Properties.*" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -output:.\SyncApi_coverage.xml -returntargetcode
+  - dir "C:\Program Files (x86)"
+  - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:C:\Program Files (x86)\Common7\IDE\MSTest.exe -targetargs:"/noresults /noisolation /testcontainer:"".\Famoser.SyncApi.UnitTests\bin\Debug\Famoser.SyncApi.UnitTests.dll" -filter:"+[SyncApi]*  -[SyncApi]SyncApi.Properties.*" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -output:.\SyncApi_coverage.xml -returntargetcode
   - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
   - pip install codecov
   - codecov -f "SyncApi_coverage.xml"
