working on new tests

--- a/Famoser.SyncApi.UnitTests/Famoser.SyncApi.UnitTests.csproj
+++ b/Famoser.SyncApi.UnitTests/Famoser.SyncApi.UnitTests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Integration Tests\OfflineRepositoryTests.cs" />
     <Compile Include="Integration Tests\SyncRepositoryTests.cs" />
     <Compile Include="Models\NoteModel.cs" />
+    <Compile Include="ServiceTests\ApiStorageTests.cs" />
     <Compile Include="ServiceTests\TraceServiceTests.cs" />
     <Compile Include="Showcases.cs" />
     <Compile Include="UnitTest1.cs" />
