--- a/Famoser.SyncApi.UnitTests/Famoser.SyncApi.UnitTests.csproj
+++ b/Famoser.SyncApi.UnitTests/Famoser.SyncApi.UnitTests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Integration Tests\SyncRepositoryTests.cs" />
     <Compile Include="Models\NoteModel.cs" />
     <Compile Include="ModelTests\SyncApiInformationModelTests.cs" />
+    <Compile Include="RepositoryTests\DeviceRepositoryTests.cs" />
     <Compile Include="ServiceTests\ApiStorageTests.cs" />
     <Compile Include="ServiceTests\TraceServiceTests.cs" />
     <Compile Include="Showcases.cs" />
