adding new unit tests

--- a/Famoser.SyncApi.UnitTests/Famoser.SyncApi.UnitTests.csproj
+++ b/Famoser.SyncApi.UnitTests/Famoser.SyncApi.UnitTests.csproj
@@ -85,7 +85,9 @@
     <Compile Include="Models\Note2Model.cs" />
     <Compile Include="Models\NoteModel.cs" />
     <Compile Include="ModelTests\SyncApiInformationModelTests.cs" />
+    <Compile Include="RepositoryTests\CollectionRepositoryTests.cs" />
     <Compile Include="RepositoryTests\DeviceRepositoryTests.cs" />
+    <Compile Include="RepositoryTests\EntityRepositoryTests.cs" />
     <Compile Include="ServiceTests\ApiStorageTests.cs" />
     <Compile Include="ServiceTests\TraceServiceTests.cs" />
     <Compile Include="Showcases.cs" />
